# brick

./: pyproject.toml
src/brick_cli/: __init__.py  cli.py  harden.py  prometheus.py
src/brick_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
